@startuml

title __TASK14's Class Diagram__\n


    namespace om.example.task14 {
      class com.example.task14.ActionChain {
          {static} + LOSS : int
          {static} + NOTHING : int
          {static} + SUCCESS : int
          ~ NUMHANDLER : int
          ~ NUMMAX : int
          ~ generate : Random
          + ActionChain()
          + process()
          + process()
          - buildChain()
      }
    }

  


    namespace om.example.task14 {
      abstract class com.example.task14.Handler {
          + Handler()
          + process()
      }
    }

  


    namespace om.example.task14 {
      class com.example.task14.HelloApplication {
          {static} + main()
          + start()
      }
    }

  


    namespace om.example.task14 {
      class com.example.task14.HelloController {
          + bags : HBox
          + coinsCount : Label
          + prizeCount : Label
          + view1 : ImageView
          + view2 : ImageView
          + view3 : ImageView
          - welcomeText : Label
          + MouseHover1()
          + MouseHover2()
          + MouseHover3()
          + MouseOff1()
          + MouseOff2()
          + MouseOff3()
          + init()
          + initialize()
          + onPay()
          + onStart()
          + statusShow()
          # onHelloButtonClick()
      }
    }

  


    namespace om.example.task14 {
      class com.example.task14.NegativeHandler {
          + NegativeHandler()
          + process()
      }
    }

  


    namespace om.example.task14 {
      class com.example.task14.Nothing {
          + Nothing()
          + process()
      }
    }

  


    namespace om.example.task14 {
      class com.example.task14.Player {
          + prize : Integer
          - count : Integer
          - name : String
          - number : Integer
          + Player()
          + addNumber()
          + addPrize()
          + getCount()
          + getNumber()
          + getPrize()
          + pay()
      }
    }

  


    namespace om.example.task14 {
      class com.example.task14.PositiveHandler {
          + PositiveHandler()
          + process()
      }
    }

  

  com.example.task14.ActionChain o-- com.example.task14.Handler : chain
  com.example.task14.ActionChain o-- com.example.task14.Player : player
  com.example.task14.Handler o-- com.example.task14.Handler : processor
  com.example.task14.HelloApplication -up-|> javafx.application.Application
  com.example.task14.HelloController .up.|> javafx.fxml.Initializable
  com.example.task14.HelloController o-- com.example.task14.Player : player1
  com.example.task14.HelloController o-- com.example.task14.ActionChain : action
  com.example.task14.NegativeHandler -up-|> com.example.task14.Handler
  com.example.task14.NegativeHandler o-- com.example.task14.Player : player
  com.example.task14.Nothing -up-|> com.example.task14.Handler
  com.example.task14.Nothing o-- com.example.task14.Player : player
  com.example.task14.PositiveHandler -up-|> com.example.task14.Handler
  com.example.task14.PositiveHandler o-- com.example.task14.Player : player


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
